Fix scrollbar header issue

--- a/style.sass
+++ b/style.sass
@@ -221,7 +221,7 @@ body.home
 				font-size: 5em
 	
 		#n
-			overflow-x: hidden
+			overflow: hidden
 			height: 70px
 
 			&.squeeze
